# Bee_API

./: .env  .env.example  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  docker-entrypoint.sh  reset.sql  schema.sql
src/: lib.rs  main.rs  response.rs  routes.rs
src/controllers/: hive_controller.rs  inspection_controller.rs  queen_controller.rs
src/models/: hive.rs  inspection.rs  queen.rs  user.rs
