[package]
name = "beekeeper_API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] } # For the runtime
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
# Date and time handling with serde support
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql"] } # For de database

# Tower for middleware (logging, etc)
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For loading environment variables from .env file
dotenv = "0.15"
